; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_getgrent.c_files_endstate.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/gen/extr_getgrent.c_files_endstate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.files_state = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @files_endstate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @files_endstate(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %21

6:                                                ; preds = %1
  %7 = load i8*, i8** %2, align 8
  %8 = bitcast i8* %7 to %struct.files_state*
  %9 = getelementptr inbounds %struct.files_state, %struct.files_state* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %6
  %13 = load i8*, i8** %2, align 8
  %14 = bitcast i8* %13 to %struct.files_state*
  %15 = getelementptr inbounds %struct.files_state, %struct.files_state* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @fclose(i32* %16)
  br label %18

18:                                               ; preds = %12, %6
  %19 = load i8*, i8** %2, align 8
  %20 = call i32 @free(i8* %19)
  br label %21

21:                                               ; preds = %18, %5
  ret void
}

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
